corrected the css refencename

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en">
-<link rel = "stylesheet"type = "text/css"href = "MikeAndersen_Resume_css.css"/>
+<link rel = "stylesheet"type = "text/css"href = "index.css"/>
 	<head>
 		<title> Resume Page</title>
 		<img title ="Mike" width='300' height='350'  src= 'https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/282337_539470029402596_661688560_n.jpg?_nc_cat=108&_nc_ht=scontent-lax3-1.xx&oh=eecd1875f7cc5a7a464957f13613fa63&oe=5CEF3C0D' style="width:50%">
